# spec-ops

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Notes.md  README.md  SUPPORT.md  pyproject.toml  test.md
.claude/commands/: tasks.md
docs/: docfx.json  index.md  installation.md  quickstart.md
scripts/: manage-milestone-branches.sh  update-task-status.sh
src/specify_cli/: __init__.py
templates/: plan-template.md  task-detail-template.md  tasks-template.md
templates/.claude/: settings.local.json
templates/.claude/commands/: detail.md  plan.md  tasks.md
templates/commands/: plan.md
